--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
 
  function send(){
   var  xhr = new XMLHttpRequest();
-//   xhr.open("POST", 'http://localhost:4000/api/token', true);
-  xhr.open("POST", 'https://secret-plateau-15983.herokuapp.com/api/token', true);
+ xhr.open("POST", 'http://localhost:4000/api/token', true);
+ // xhr.open("POST", 'https://secret-plateau-15983.herokuapp.com/api/token', true);
   xhr.setRequestHeader("Content-Type", "application/json");
   xhr.onreadystatechange = function(res) { // Call a function when the state changes.
     if (this.readyState === XMLHttpRequest.DONE && this.status === 200) {
@@ -99,8 +99,8 @@
   function  justify (){
   
   var  xhr = new XMLHttpRequest();
-//   xhr.open("POST", 'http://localhost:4000/api/justify', true);
- xhr.open("POST", 'https://secret-plateau-15983.herokuapp.com/api/justify', true);
+  xhr.open("POST", 'http://localhost:4000/api/justify', true);
+ //xhr.open("POST", 'https://secret-plateau-15983.herokuapp.com/api/justify', true);
   xhr.setRequestHeader("Content-Type", "text/plain");
   xhr.setRequestHeader('x-access-token', token)
   xhr.onreadystatechange = function(res) {
